<resources>
    <string name="app_name">ShieldMaidens</string>

    <!--MainActivity strings-->
    <string name="not_found">Sorry, AffdexMe requires the use of a front-facing camera, which was not found on your device.</string>
    <string name="affectiva_logo_content_description">Affectiva Logo</string>
    <string name="fps">FPS:</string>
    <string name="loading">Loading&#8230;</string>
    <string name="settings_content_description">Settings</string>

    <!--MetricSelectionFragment strings-->
    <string name="clear_all">Clear All</string>
    <string name="metric_chooser_default_message">0 metrics chosen.</string>
    <string name="choose_six_message">Choose 6 emotions and expressions below to display on the main screen.</string>

    <!--SettingsActivity strings-->
    <string name="select_metrics_title">Select Metrics</string>
    <string name="select_metrics_message">Select emotions and expressions to display.</string>

    <string name="settings_title">Settings</string>
    <string name="settings_message">Change application settings.</string>

    <!--SettingsFragment strings-->
    <string name="set_fps_title">Set Target FPS</string>
    <string name="set_fps_message">Set the desired processed frames per second.</string>
    <string name="fps_edittext_title">Processed Frames Per Second</string>

    <string name="show_tracking_title">Show Tracking Dots</string>
    <string name="show_tracking_message">Display tracking dots and bounding box.</string>

    <string name="show_measurements_title">Show Measurements</string>
    <string name="show_measurements_message">Display roll, yaw, pitch, and interocular distance.</string>

    <string name="show_fps_title">Show FPS</string>
    <string name="show_fps_message">Display the actual processed frames per second.</string>
</resources>
