<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="fps"
        android:title="@string/show_fps_title"
        android:summary="@string/show_fps_message"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="measurements"
        android:title="@string/show_measurements_title"
        android:summary="@string/show_measurements_message"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="track"
        android:title="@string/show_tracking_title"
        android:summary="@string/show_tracking_message"
        android:defaultValue="true"/>
    <EditTextPreference
        android:key="rate"
        android:inputType="number"
        android:ems="3"
        android:maxLength="2"
        android:title="@string/set_fps_title"
        android:summary="@string/set_fps_message"
        android:dialogTitle="@string/fps_edittext_title"
        android:defaultValue="20"/>
</PreferenceScreen>